crates/cli/tests/snapshots/bool_comparison__fix_c031ce4a7d754ef42071e72da7d6bf4b645ebdaf948399be54f775686a58347b.snap
---
source: crates/cli/tests/bool_comparison.rs
expression: "\"e != true\""
---
--- <temp_file_path>
+++ <temp_file_path> [fixed]
@@ -1 +1 @@
-e != true
+!e
