crates/cli/tests/snapshots/bool_comparison__lint_101b3f071d9ef6e1c6cddd4b3d4d2a4f7d4cf2764ff5811ee2d532b3ccb45690.snap
---
source: crates/cli/tests/bool_comparison.rs
expression: "\"f != false\""
---
[W01] Warning: Unnecessary comparison with boolean
   ╭─[<temp_file_path>:1:1]
   │
 1 │ f != false
   · ─────┬────  
   ·      ╰────── Comparing f with boolean literal false
───╯
