crates/cli/tests/snapshots/bool_comparison__lint_5d2c71eef69cc07e519dc3646f786ba7a32f5546c3a2194d2636a2684391e3f1.snap
---
source: crates/cli/tests/bool_comparison.rs
expression: "\"false == false\""
---
[01] Warning: Unnecessary comparison with boolean
   ╭─[<temp_file_path>:1:1]
   │
 1 │ false == false
   · ───────┬──────  
   ·        ╰──────── Comparing false with boolean literal false
───╯
