crates/cli/tests/snapshots/bool_comparison__lint_630b66ca8810d52f4e68ed1c8d68db36bce21a1cb65b60ec15b901e87b62c13a.snap
---
source: crates/cli/tests/bool_comparison.rs
expression: "\"false != h\""
---
[01] Warning: Unnecessary comparison with boolean
   ╭─[<temp_file_path>:1:1]
   │
 1 │ false != h
   │ ─────┬────  
   │      ╰────── Comparing h with boolean literal false
───╯
