crates/cli/tests/snapshots/bool_comparison__lint_82b623ef0ecd1e0e70c1dbe39f02832657a82dd5a58392f23345b22467a89b1a.snap
---
source: crates/cli/tests/bool_comparison.rs
expression: "\"true == true\""
---
[01] Warning: Unnecessary comparison with boolean
   ╭─[<temp_file_path>:1:1]
   │
 1 │ true == true
   │ ──────┬─────  
   │       ╰─────── Comparing true with boolean literal true
───╯
